--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.1'
 services:
-  teamspeak:
+  ts3-server:
     image: teamspeak
     restart: unless-stopped
     container_name: ts3-server
@@ -18,8 +18,8 @@ services:
       TS3SERVER_DB_WAITUNTILREADY: 30
       TS3SERVER_LICENSE: accept
     depends_on: 
-        - ts-db
-  ts-db:
+        - ts3-db
+  ts3-db:
     image: mariadb
     container_name: ts3-db
     restart: unless-stopped
