correccion de error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       TS3SERVER_DB_PLUGIN: ts3db_mariadb
       TS3SERVER_DB_SQLCREATEPATH: create_mariadb
-      TS3SERVER_DB_HOST: db
+      TS3SERVER_DB_HOST: ts3-db
       TS3SERVER_DB_USER: root
       TS3SERVER_DB_PASSWORD: ${DB_PASSWORD}
       TS3SERVER_DB_NAME: ${DB_NAME}
